# lstm-sdparser

./: .gitignore  CMakeLists.txt  README.md  lstm-list-note
cnn/cnn/: training.h
dynet/: CMakeLists.txt
examples/: test.sh  trail.train.conll  train.sh
examples/data/: trail.dev.conll  trail.emb  trail.test.conll
lstmsdparser/: CMakeLists.txt  bilstm.cc  c2.h  layers.h  listbased.cc  listbased.h  lstm-parse.cc  lstm_par.cpp  lstm_par_cmdline.cpp  lstm_sdparser.cpp  lstm_sdparser.h  lstm_sdparser_dll.cpp  lstm_sdparser_dll.h  main.cpp  swapbased.h  theirtreelstm.cc  theirtreelstm.h  treelstm.cc
parser/: CMakeLists.txt  c2.h  lstm-parse.cc  lstm_par.cpp  lstm_sdparser.cpp  lstm_sdparser.h  lstm_sdparser_dll.cpp  lstm_sdparser_dll.h  main.cpp
parser/lib/: liblstm_sdparser.so.0.0.1
